--- a/README
+++ b/README
@@ -11,3 +11,4 @@ combine-xmgrace.py    - combine two xmgrace-format files
 scraper.py            - general web scraper
 average.py            - quick averaging of columnar datafile
 extract-bib.py        - extract and collate bibtex records
+planetary_sys_trj.py  - make trajectories of solar system
