--- a/README
+++ b/README
@@ -1,16 +1,22 @@
-acf.py                - autocorrelation function of a time series
-count-inodes.sh       - check inodes usage in sub-directories
-energy_fluctuations.R - drift from espressopp energy file
-error_bars_datfile.py - calculate Student t error bars over columnar data
-histogram.f90         - 1D histogram of (weighted) data (input-histogram)
-KirkwoodBuffIntegral.py - KBI from RDF
-pca.py                - PCA on Cartesian coordinates of protein
-power_spectrum.R      - power spectrum from time series
-xyz2gro-awk.sh        - xyz format to gro format
-combine-xmgrace.py    - combine two xmgrace-format files
-scraper.py            - general web scraper
-average.py            - quick averaging of columnar datafile
-extract-bib.py        - extract and collate bibtex records
-planetary_sys_trj.py  - make trajectories of solar system
-oscillator.py         - simulate probability distn of harmonic oscillator
+# info
 parse_aws_logs.py     - parse AWS s3 access logs
+count-inodes.sh       - check inodes usage in sub-directories
+extract-bib.py        - extract and collate bibtex records
+average.py            - quick averaging of columnar datafile
+scraper.py            - general web scraper
+combine-xmgrace.py    - combine two xmgrace-format files
+
+# maths/stats
+oscillator.py         - simulate probability distn of harmonic oscillator
+acf.py                - autocorrelation function of a time series
+error_bars_datfile.py - calculate Student t error bars over columnar data
+crypto.py             - crypto by letter frequencies
+histogram.f90         - 1D histogram of (weighted) data (input-histogram)
+power_spectrum.R      - power spectrum from time series
+
+# chimie/physique
+pca.py                - PCA on Cartesian coordinates of protein
+planetary_sys_trj.py  - make trajectories of solar system
+energy_fluctuations.R - drift from espressopp energy file
+KirkwoodBuffIntegral.py - KBI from RDF
+xyz2gro-awk.sh        - xyz format to gro format
